[package]
name = "testing"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = true, features = [
  # # non-default-features as of 0.16.1
  # "dynamic_linking", # use during development
  "bevy_dev_tools",
  "wayland",
] }
bevy_panorbit_camera = { version = "0.27.0", features = ["bevy_egui"] }
# For some reason my shit breaks on 0.27.0 and above
bevy_egui = "0.35.1"
log = { version = "0.4.27", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
anyhow = "1.0"
bevy_tweening = "0.13.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Profile for performance analysis with cargo-flamegraph
[profile.perf]
inherits = "release"
# Enable debug symbols for profiling while keeping full optimizations
debug = true
