[package]
name = "testing"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = true, features = [
  # # non-default-features as of 0.16.1
  # "dynamic_linking", # use during development
  "bevy_dev_tools",
  "wayland",
] }
bevy_panorbit_camera = { git = "https://github.com/Plonq/bevy_panorbit_camera", rev = "b49f32cf54bd6d986b959133bd91ca0fe5e1fc96" }
# This is the exact commit where the bug appears.
# This is the last good working version
# bevy_panorbit_camera = { version = "=0.27.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Profile for performance analysis with cargo-flamegraph
[profile.perf]
inherits = "release"
# Enable debug symbols for profiling while keeping full optimizations
debug = true
